src/test/resources/bad/badSemantics.out
src/test/resources/bad/badSemantics.cooma:1:19:error: expected Int, got "hello" of type String
{fun (x : Int) x}("hello")
                  ^
